# golem

./: AGENTS.md  Makefile  README.md  anthropic.py  azure.py  azureai.py  costs.py  gemini.py  golem.py  latencies.py  ollama.py  openai.py  pyproject.toml  setup.py  tokens.sh  util.py  vertex.py
.github/workflows/: pylint.yml
etc/: models.yaml
example/: jsont.py  questions.jsonl  summarise.py
example/standard/: Makefile  prompts.jsonl  system-prompt.txt  template.jsont
example/standard/gpt-35-turbo-0125/: Makefile  answers.jsonl  summary.psv
