[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golem"
version = "0.1"
description = "Use Large Language Model APIs from the command line."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
authors = [
    {name = "Robert E. Blackwell", email = "rblackwell@turing.ac.uk"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/RobBlackwell/golem"

[project.scripts]
golem = "golem:main"

[tool.setuptools]
py-modules = ["golem", "openai", "anthropic", "azure", "azureai", "gemini", "vertex", "ollama", "util", "costs"]

[project.optional-dependencies]
dev = [
    "pylint",
]

